[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://art/Vertical.png" type="Texture" id=2]
[ext_resource path="res://Vertical.png" type="Texture" id=3]
[ext_resource path="res://art/Ground.png" type="Texture" id=4]
[ext_resource path="res://art/Horizontal.png" type="Texture" id=5]
[ext_resource path="res://art/Obstacle.png" type="Texture" id=6]
[ext_resource path="res://Mob.gd" type="Script" id=7]
[ext_resource path="res://HUD.gd" type="Script" id=8]
[ext_resource path="res://art/Obstacle2.png" type="Texture" id=9]
[ext_resource path="res://Mob3.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "duck_one",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "jump_one",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 36, 20 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Ground",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "ob_1",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 15, 23 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "ob_1",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 60, 50 )

[node name="Node2D" type="Node2D"]

[node name="Main" type="Node" parent="."]

[node name="Player" type="Area2D" parent="."]
collision_layer = 255
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
position = Vector2( 150, 400 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "duck_one"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 150, 400 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 5 )
one_way_collision_margin = 2.0

[node name="Platform" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Platform"]
position = Vector2( 500, 585 )
scale = Vector2( 2.5, 1.5 )
frames = SubResource( 3 )
animation = "Ground"

[node name="Mob" type="RigidBody2D" parent="."]
position = Vector2( 1500, 420 )
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Mob"]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 4 )
animation = "ob_1"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Mob"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mob"]
shape = SubResource( 7 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="Heading" type="RichTextLabel" parent="HUD"]
margin_left = 800.0
margin_top = 50.0
margin_right = 840.0
margin_bottom = 90.0
text = "Score:"

[node name="Score" type="RichTextLabel" parent="HUD"]
margin_left = 850.0
margin_top = 50.0
margin_right = 890.0
margin_bottom = 90.0
text = "0"

[node name="StartTimer" type="Timer" parent="HUD"]
one_shot = true

[node name="ScoreTimer" type="Timer" parent="HUD"]
wait_time = 0.1

[node name="Mob3" type="RigidBody2D" parent="."]
position = Vector2( 1500, 400 )
collision_layer = 255
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Mob3"]
frames = SubResource( 9 )
animation = "ob_1"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mob3"]
shape = SubResource( 10 )

[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
[connection signal="end_game" from="Player" to="Mob" method="_on_Player_end_game"]
[connection signal="end_game" from="Player" to="HUD" method="_on_Player_end_game"]
[connection signal="end_game" from="Player" to="Mob3" method="_on_Player_end_game"]
[connection signal="first_jump" from="Player" to="Mob" method="_on_Player_first_jump"]
[connection signal="first_jump" from="Player" to="HUD" method="_on_Player_first_jump"]
[connection signal="first_jump" from="Player" to="Mob3" method="_on_Player_first_jump"]
[connection signal="timeout" from="HUD/StartTimer" to="HUD" method="_on_StartTimer_timeout"]
[connection signal="timeout" from="HUD/ScoreTimer" to="HUD" method="_on_ScoreTimer_timeout"]
